--- a/2day/index.css
+++ b/2day/index.css
@@ -1,7 +1,7 @@
 // delete the following line if no text is used
 // edit the line if you wanna use other fonts
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:700,300);
-
+/* https://dragonza.io/how-to-create-animated-hamburger-icon-with-css/ */
 // use only the available space inside the 400x400 frame
 .frame {
   position: absolute;
